[project]
name = "agent-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Chris Mungall", email = "cjm@berkeleybop.org" }
]
requires-python = ">=3.9"
dependencies = [
    "meteostat>=1.6.8",
    "nmdc-geoloc-tools",
    "pydantic-ai>=0.0.42",
    "soilgrids>=0.1.4",
    "pytest>=8.3.5",
]

[project.scripts]
agent-test = "agent_test:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
nmdc-geoloc-tools = { git = "https://github.com/microbiomedata/geoloc-tools.git" }
